[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.584314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 256.0
margin_top = 160.0
margin_right = 768.0
margin_bottom = 448.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 214.0
margin_top = 98.0
margin_right = 298.0
margin_bottom = 190.0

[node name="ResumeButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 84.0
margin_bottom = 20.0
text = "Resume"

[node name="SaveButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 84.0
margin_bottom = 44.0
text = "Save Game"

[node name="LoadButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 84.0
margin_bottom = 68.0
text = "Load Game"

[node name="QuitButton" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 84.0
margin_bottom = 92.0
text = "Quit"
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
